ajout fonction pour recuperer les infos d'un film + fonction pour aller chercher les sept meilleurs films apres le film principal commencée

--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
         <div><img id="meilleur_film_image"></div>
     </div>
     <!-- les 7 films les mieux notés -->
+    <p>sept_meilleurs_films</p>
     <div class="sept_meilleurs_films">
-        <p>sept_meilleurs_films</p>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><input type="button" value="previous"></div>
+        <div class="meilleur_film1"></div>
+        <div class="meilleur_film2"></div>
+        <div class="meilleur_film3"></div>
+        <div class="meilleur_film4"></div>
+        <div class="meilleur_film5"></div>
+        <div class="meilleur_film6"></div>
+        <div class="meilleur_film7"></div>
+        <div><input type="button" value="next"></div>
     </div>
     <!-- 7 films de la catégorie 1 -->
     <div class="premiere_categorie">
