toutes les catégories de films affichées avec les images et les boutons

--- a/index.html
+++ b/index.html
@@ -39,50 +39,20 @@
         <div><img id="meilleur_film_image"></div>
     </div>
     <!-- les 7 films les mieux notés -->
-    <p>sept_meilleurs_films</p>
+    <p>sept meilleurs films toutes catégories</p>
     <div class="sept_meilleurs_films">
-        <div><input type="button" value="previous"></div>
-        <div class="meilleur_film1"></div>
-        <div class="meilleur_film2"></div>
-        <div class="meilleur_film3"></div>
-        <div class="meilleur_film4"></div>
-        <div class="meilleur_film5"></div>
-        <div class="meilleur_film6"></div>
-        <div class="meilleur_film7"></div>
-        <div><input type="button" value="next"></div>
     </div>
     <!-- 7 films de la catégorie 1 -->
+    <p>sept meilleurs films d'animation</p>
     <div class="premiere_categorie">
-        <p>premier categorie</p>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
     </div>
     <!-- 7 films de la catégorie 2 -->
+    <p>sept meilleurs films de sport</p>
     <div class="deuxieme_categorie">
-        <p>deuxieme categorie</p>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
     </div>
     <!-- 7 films de la catégorie 3 -->
+    <p>sept meilleurs films de science-fiction</p>
     <div class="troisieme_categorie">
-        <p>troisieme categorie</p>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
     </div>
     
 <script src="juststream.js"></script>
