--- a/index.html
+++ b/index.html
@@ -40,19 +40,31 @@
     </div>
     <!-- les 7 films les mieux notés -->
     <p>sept meilleurs films toutes catégories</p>
-    <div class="sept_meilleurs_films">
+    <div class="carousel_sept_meilleurs_films">
+        <button class="bouton-prev">previous</button>
+        <div id="contenu_carousel_sept_meilleurs_films"></div>
+        <button class="bouton-next" >next</button>
     </div>
     <!-- 7 films de la catégorie 1 -->
     <p>sept meilleurs films d'animation</p>
-    <div class="premiere_categorie">
+    <div class="carousel_premiere_categorie">
+        <button class="bouton-prev">previous</button>
+        <div id="contenu_carousel_premiere_categorie"></div>
+        <button class="bouton-next" >next</button>
     </div>
     <!-- 7 films de la catégorie 2 -->
     <p>sept meilleurs films de sport</p>
-    <div class="deuxieme_categorie">
+    <div class="carousel_deuxieme_categorie">
+        <button class="bouton-prev">previous</button>
+        <div id="contenu_carousel_deuxieme_categorie"></div>
+        <button class="bouton-next">next</button>
     </div>
     <!-- 7 films de la catégorie 3 -->
     <p>sept meilleurs films de science-fiction</p>
-    <div class="troisieme_categorie">
+    <div class="carousel_troisieme_categorie">
+        <button class="bouton-prev">previous</button>
+        <div id="contenu_carousel_troisieme_categorie"></div>
+        <button class="bouton-next">next</button>
     </div>
     
 <script src="juststream.js"></script>
