ajout des modals partout + site responsive

--- a/index.html
+++ b/index.html
@@ -36,35 +36,37 @@
             </br>
             <div id="meilleur_film_description"></div>
         </div>
-        <div><img id="meilleur_film_image"></div>
+        <div id="div_meilleur_film_image"><img id="meilleur_film_image"></div>
     </div>
-    <!-- les 7 films les mieux notés -->
-    <p>sept meilleurs films toutes catégories</p>
-    <div class="carousel_sept_meilleurs_films">
-        <div id="contenu_carousel_sept_meilleurs_films"></div>
-        <button class="bouton-prev">previous</button>
-        <button class="bouton-next" >next</button>
-    </div>
-    <!-- 7 films de la catégorie 1 -->
-    <p>sept meilleurs films d'animation</p>
-    <div class="carousel_premiere_categorie">
-        <div id="contenu_carousel_premiere_categorie"></div>
-        <button class="bouton-prev">previous</button>
-        <button class="bouton-next" >next</button>
-    </div>
-    <!-- 7 films de la catégorie 2 -->
-    <p>sept meilleurs films de sport</p>
-    <div class="carousel_deuxieme_categorie">
-        <div id="contenu_carousel_deuxieme_categorie"></div>
-        <button class="bouton-prev">previous</button>
-        <button class="bouton-next">next</button>
-    </div>
-    <!-- 7 films de la catégorie 3 -->
-    <p>sept meilleurs films de science-fiction</p>
-    <div class="carousel_troisieme_categorie">
-        <div id="contenu_carousel_troisieme_categorie"></div>
-        <button class="bouton-prev">previous</button>
-        <button class="bouton-next">next</button>
+    <div>
+        <!-- les 7 films les mieux notés -->
+        <p>sept meilleurs films toutes catégories</p>
+        <div class="carousel_sept_meilleurs_films">
+            <div id="contenu_carousel_sept_meilleurs_films"></div>
+            <button class="bouton-prev">previous</button>
+            <button class="bouton-next" >next</button>
+        </div>
+        <!-- 7 films de la catégorie 1 -->
+        <p>sept meilleurs films d'animation</p>
+        <div class="carousel_premiere_categorie">
+            <div id="contenu_carousel_premiere_categorie"></div>
+            <button class="bouton-prev">previous</button>
+            <button class="bouton-next" >next</button>
+        </div>
+        <!-- 7 films de la catégorie 2 -->
+        <p>sept meilleurs films de sport</p>
+        <div class="carousel_deuxieme_categorie">
+            <div id="contenu_carousel_deuxieme_categorie"></div>
+            <button class="bouton-prev">previous</button>
+            <button class="bouton-next">next</button>
+        </div>
+        <!-- 7 films de la catégorie 3 -->
+        <p>sept meilleurs films de science-fiction</p>
+        <div class="carousel_troisieme_categorie">
+            <div id="contenu_carousel_troisieme_categorie"></div>
+            <button class="bouton-prev">previous</button>
+            <button class="bouton-next">next</button>
+        </div>
     </div>
     
 <script src="juststream.js"></script>
