ajout du README et titres des catégories agrandis

--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
     </div>
     <div>
         <!-- les 7 films les mieux notés -->
-        <p>sept meilleurs films toutes catégories</p>
+        <p>Meilleurs films toutes catégories</p>
         <div class="carousel_sept_meilleurs_films">
             <div id="contenu_carousel_sept_meilleurs_films"></div>
             <button class="bouton-prev">previous</button>
             <button class="bouton-next" >next</button>
         </div>
         <!-- 7 films de la catégorie 1 -->
-        <p>sept meilleurs films d'animation</p>
+        <p>Meilleurs films d'animation</p>
         <div class="carousel_premiere_categorie">
             <div id="contenu_carousel_premiere_categorie"></div>
             <button class="bouton-prev">previous</button>
             <button class="bouton-next" >next</button>
         </div>
         <!-- 7 films de la catégorie 2 -->
-        <p>sept meilleurs films de sport</p>
+        <p>Meilleurs films de sport</p>
         <div class="carousel_deuxieme_categorie">
             <div id="contenu_carousel_deuxieme_categorie"></div>
             <button class="bouton-prev">previous</button>
             <button class="bouton-next">next</button>
         </div>
         <!-- 7 films de la catégorie 3 -->
-        <p>sept meilleurs films de science-fiction</p>
+        <p>Meilleurs films de science-fiction</p>
         <div class="carousel_troisieme_categorie">
             <div id="contenu_carousel_troisieme_categorie"></div>
             <button class="bouton-prev">previous</button>
