--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css" />
-        <meta charset="utf-8"/>
+        <link rel="stylesheet" href="style.css"/>
         <title>JustStreamIt</title>
     </head>
     <body>
@@ -31,12 +30,11 @@
     <!-- le film le mieux noté -->
     <div id="meilleur_film_section">
         <div id="meilleur_film_infos">
-            <h3 id="meilleur_film_titre"></h3>
+            <div id="meilleur_film_titre"></div>
             <div id="meilleur_film_bouton" ><input type="button" value="en savoir plus"></div>
-            </br>
             <div id="meilleur_film_description"></div>
         </div>
-        <div id="div_meilleur_film_image"><img id="meilleur_film_image"></div>
+        <div id="div_meilleur_film_image"></div>
     </div>
     <div>
         <!-- les 7 films les mieux notés -->
